--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "Justin True",
   "license": "ISC",
   "dependencies": {
+    "@angular/cli": "^1.7.2",
     "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^4.34.0"
